# bprinter

./: CMakeLists.txt  LICENSE  README  README.md
include/bprinter/: table_printer.h
include/bprinter/impl/: table_printer.tpp.h
include/tprinter/: table_printer.h
src/: table_printer.cpp  test_main.cxx
